--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "illuminate/support": "5.2.*",
-    "illuminate/queue": "5.2.*",
+    "illuminate/support": "5.2.*|5.3.*",
+    "illuminate/queue": "5.2.*|5.3.*",
     "php-amqplib/php-amqplib": "2.6.*"
   },
   "autoload": {
