--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "ramilexe/laravel-queue-rabbitmq",
-  "version": "5.1",
+  "version": "5.3",
   "description": "RabbitMQ driver for Laravel Queue",
   "license": "MIT",
   "authors": [
@@ -11,8 +11,8 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "illuminate/support": "5.1.*",
-    "illuminate/queue": "5.1.*",
+    "illuminate/support": ">=5.3.*",
+    "illuminate/queue": ">=5.3.*",
     "videlalvaro/php-amqplib": "2.5.*"
   },
   "autoload": {
