Fix error with composer update

--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "illuminate/support": ">=5.3.*",
-    "illuminate/queue": ">=5.3.*",
+    "illuminate/support": "5.3.*",
+    "illuminate/queue": "5.3.*",
     "videlalvaro/php-amqplib": "2.5.*"
   },
   "autoload": {
